# pds-demo-drone

./: CMakeLists.txt  README.md  install_dependencies.sh
config/: config.cfg.TEMPLATE
data/: map_test.json
notes/: TODO  notes_1.txt
src/: Main.cpp
src/channels/: channels.cpp  channels.h
src/config/: ConfigParams.h  ConfigParser.cpp
src/engine/: Coordinates.cpp  Coordinates.h  Engine.cpp  Engine.h  MapInfos.h
src/gui/events/: Events.h  event_manager.cpp  event_manager.h
src/gui/renderer/: Renderer.cpp  Renderer.h
